eregisterk8s/b1a-emr-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emr-cluster-ip-service
spec:
  selector:
    component: emr
  
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
