eregisterk8s/b1b-emr-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emr-cluster-ip-service
spec:
  selector:
    component: emr
  type: NodePort
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
    nodePort: 30300
  externalIPs:
    - 192.168.8.210
