eregisterk8s/c1-erp-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: erp
  ports:
    - name: http
      protocol: TCP
      port: 8069
      targetPort: 8069
