eregisterk8s/a-nginx-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: eregister-ls-tls
      hosts:
        - eregister.ls
spec:
  rules:
    - host: eregister.ls
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: emr-cluster-ip-service
                port:
                  number: 443
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: erp-cluster-ip-service
                port:
                  number: 8069
